option reachable by extension icon

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="options.css">
 </head>
 <body>
+  <header>
+    <img src="../images/icon512.png" class="icon" /> Calimoto Enhancer
+  </header>
   <div class="option-list">
     <div class="option-item">
       <div class="option-item__input">
