refresh page after change options

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -7,6 +7,7 @@
 <body>
   <header>
     <img src="../images/icon512.png" class="icon" /> Calimoto Enhancer
+    <button id="refresh" class="hidden">Refresh page</button>
   </header>
   <div class="option-list">
     <div class="option-item">
