all feature are optional

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -10,6 +10,7 @@
     <button id="refresh" class="hidden">Refresh page</button>
   </header>
   <div class="option-list">
+
     <div class="option-item">
       <div class="option-item__input">
         <label class="switch">
@@ -18,7 +19,31 @@
         </label>
       </div>
       <div class="option-item__description">
-        Smaller font
+        Smaller font size
+      </div>
+    </div>
+
+    <div class="option-item">
+      <div class="option-item__input">
+        <label class="switch">
+          <input type="checkbox" id="biggerSearchbar" class="saveOnChange">
+          <span class="slider round"></span>
+        </label>
+      </div>
+      <div class="option-item__description">
+        Bigger searchbar
+      </div>
+    </div>
+
+    <div class="option-item">
+      <div class="option-item__input">
+        <label class="switch">
+          <input type="checkbox" id="markerLinks" class="saveOnChange">
+          <span class="slider round"></span>
+        </label>
+      </div>
+      <div class="option-item__description">
+        Marker external links
       </div>
     </div>
   </div>
