--- a/src/options/options.html
+++ b/src/options/options.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header>
-    <img src="../images/icon512.png" class="icon" /> Calimoto Enhancer
+    <img src="../images/icon36.png" class="icon" /> Calimoto Poweride
     <button id="refresh" class="hidden">Refresh page</button>
   </header>
   <div class="option-list">
