--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="options.css">
 </head>
+
 <body>
   <header>
     <img src="../images/icon32.png" class="icon" /> Calimoto Poweride
@@ -55,9 +57,10 @@
     <div class="saved hidden" id="refresh">
       <span class="green">Settings saved.</span>
       <small>You can reload Calimoto.</small>
-  </div>
+    </div>
   </section>
-  <script src="../main.js"></script>
+  <script src="../const.js"></script>
   <script src="options.js"></script>
 </body>
+
 </html>
